--- a/app/www/selecionado.html
+++ b/app/www/selecionado.html
@@ -3,8 +3,8 @@
     <ion-header-bar class="bar-dark">
         <h1 class="title">teste</h1>
     </ion-header-bar><br><br><br><br><br>
-          <div ng-model="nomeSelecionado">
-          {{nomeSelecionado}}
+          <div >
+          {{desabafo}}
           </div>
   </ion-pane>
 </ion-view>
